# robocup_palbator-hri_python

./: HRIManager.py  README.md  arg_fetcher.py  ask_age.py  ask_drink.py  ask_name.py  ask_open_door.py  ask_something.py  ask_speciality.py  ask_to_follow.py  call_human.py  configurations.py  confirm.py  display_info.py  generic.py  go_to.py  multiplexer.py  present_person.py  seat_guest.py  show_video.py  views.py  wait.py
HriManager/: CMakeLists.txt  package.xml
HriManager/action/: GmToHri.action
HriManager/config/: common_gm.yaml  config_HRI.yaml
HriManager/launch/: hri_manager.launch
HriManager/msg/: DataToSay.msg
HriManager/scripts/: GeneralManager.py  HRIManager.py  HRIManager_old.py  HRIManager_v1.py  HRIManager_v3working.py  HRI_launcher.py  LocalManagerWrapperV2.py  README.md  (+12 more)
code_to_GM/: GeneralManager.py  LocalManagerWrapperV2.py  common_gm.yaml  testThomas_Receptionist2020CPEScenario.py
connectionManager/: CMakeLists.txt  package.xml
speechToTextPalbator/: CMakeLists.txt  package.xml
templates/: __init__.py
ttsManager/rapp_platform_ros_communications/: CMakeLists.txt  package.xml
ttsManager/rapp_platform_ros_communications/action/: SayVocalSpeech.action
ttsManager/rapp_platform_ros_communications/srv/ApplicationAuthentication/: UserLoginSrv.srv
ttsManager/rapp_platform_ros_communications/srv/DbWrapper/: checkActiveApplicationTokenSrv.srv  getUserLanguageSrv.srv
ttsManager/rapp_platform_ros_communications/srv/TextToSpeechEspeak/: TextToSpeechSrv.srv
ttsMimic/: CMakeLists.txt  package.xml
voiceManager/: CMakeLists.txt  package.xml
(+179 files in other folders)
