<?xml version="1.0"?>
<package format="2">
  <name>rapp_platform_ros_communications</name>
  <version>0.0.1</version>
  <description>The rapp_platform_ros_communications package</description>

  <maintainer email="etsardou@iti.gr">Emmanouil Tsardoulias</maintainer>
  <license>APACHE 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib_msgs</build_depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>actionlib_msgs</exec_depend>
</package>
